--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "jszip": "^3.10.1",
     "next": "^15.0.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "shadcn-ui": "^0.9.3"
   },
   "devDependencies": {
+    "@shadcn/ui": "^0.0.4",
     "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
